# music_downloader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
extractors/: bandcamp.py  common.py  job.py  soundcloud.py
music_dl/: main.py
music_dl/extractors/: bandcamp.py  common.py  job.py  soundcloud.py
