[project]
name = "music-dl"
version = "2.0"
description = ""
authors = [
    {name = "NeodarZ",email = "neodarz@neodarz.net"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "sh (>=2.2.1,<3.0.0)",
    "youtube-dl (>=2021.12.17,<2022.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
music-dl = "music_dl.main:run"